# console_star

./: .clang-format  .gitignore  CMakeLists.txt  README.md  star.cpp  star.h
src/: CMakeLists.txt  Console_Star.cpp  Console_Star.h  star.cpp
src/lib/: CMakeLists.txt  star.cpp  star.h
